タブ開く際にディレクトリツリーも開く

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vim/pack/vendor/start/indentLine"]
 	path = vim/pack/vendor/start/indentLine
 	url = https://github.com/Yggdroot/indentLine.git
+[submodule "vim/pack/vendor/start/vim-nerdtree-tabs"]
+	path = vim/pack/vendor/start/vim-nerdtree-tabs
+	url = https://github.com/jistr/vim-nerdtree-tabs.git
